[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "lczero_bindings"
version = "0.1.0"
description = "Leela Chess Zero Python bindings"
authors = [{ name = "The LCZero Authors" }]
license = {file = "COPYING"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU"
]

[project.urls]
homepage = "https://github.com/LeelaChessZero/lc0"

[tool.meson-python.args]
dist = []
setup = [
    "-Dpython_bindings=true",
    "-Ddx=false",
    "-Dcudnn=true",
    "-Dplain_cuda=true",
    "-Dopencl=false",
    "-Dblas=true",
    "-Dmkl=false",
    "-Dopenblas=false",
    "-Ddnnl=false",
    "-Dgtest=false",
    "-Dcudnn_include=C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\include,C:\\Program Files\\NVIDIA\\CUDNN\\v9.5\\include\\12.6",
    "-Dcudnn_libdirs=C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\lib\\x64,C:\\Program Files\\NVIDIA\\CUDNN\\v9.5\\lib\\x64\\12.6",
    "-Dopencl_libdirs=C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\lib\\x64",
    "-Dopencl_include=C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\include",
    "-Ddefault_library=static"
]
compile = []
install = []
